Test setValue, patchValue

--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -203,6 +203,9 @@
           </button>
         </div>
       </div>
+
+      <button type="button" (click)="SetValueF()" class="btn btn-danger">SetValue</button>
+      <button type="button" (click)="PatchValue()" class="btn">PatchValue</button>
     </form>
   </div>
 </div>
