--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -15,8 +15,6 @@
                  id="firstNameId"
                  type="text"
                  placeholder="First Name (required)"
-                 required
-                 minlength="3"
                  [ngClass]="{'is-invalid': ( customerForm.get('firstName').touched || customerForm.get('firstName').dirty) && !customerForm.get('firstName').valid }" />
           <span class="invalid-feedback">
             <span *ngIf="customerForm.get('firstName').errors?.required">
@@ -37,8 +35,6 @@
                  id="lastNameId"
                  type="text"
                  placeholder="Last Name (required)"
-                 required
-                 maxlength="50"
                  formControlName="lastName"
                  [ngClass]="{'is-invalid': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }" />
           <span class="invalid-feedback">
@@ -60,8 +56,6 @@
                  id="emailId"
                  type="email"
                  placeholder="Email (required)"
-                 required
-                 email
                  formControlName="email"
                  [ngClass]="{'is-invalid': (customerForm.get('email').touched || customerForm.get('email').dirty) && !customerForm.get('email').valid }" />
           <span class="invalid-feedback">
@@ -204,8 +198,12 @@
         </div>
       </div>
 
-      <button type="button" (click)="SetValueF()" class="btn btn-danger">SetValue</button>
-      <button type="button" (click)="PatchValue()" class="btn">PatchValue</button>
+      <button type="button"
+              (click)="SetValueF()"
+              class="btn btn-danger">SetValue</button>
+      <button type="button"
+              (click)="PatchValue()"
+              class="btn">PatchValue</button>
     </form>
   </div>
 </div>
