--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -69,6 +69,8 @@
         </div>
       </div>
 
+
+
       <!-- <div class="form-group row mb-2">
         <div class="col-md-8">
           <div class="form-check">
@@ -185,6 +187,49 @@
           </div>
         </div>
       </div> -->
+
+      <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label"
+               for="phoneId">phone</label>
+        <div class="col-md-8">
+          <input class="form-control"
+                 id="phoneId"
+                 type="phone"
+                 placeholder="phone"
+                 formControlName="phone"
+                 [ngClass]="{'is-invalid': (customerForm.get('phone').touched || customerForm.get('phone').dirty) && !customerForm.get('phone').valid }" />
+          <span class="invalid-feedback">
+            <span *ngIf="customerForm.get('phone').errors?.required">
+              Please enter your email address.
+            </span>
+          </span>
+        </div>
+      </div>
+
+
+      <div class="form-group row mb-2">
+        <label class="col-md-2 col-form-label pt-0">sent Notifications</label>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input"
+                 (click)="setNotification('email')"
+                 formControlName="notification"
+                 type="radio"
+                 id="emailRadioId"
+                 value="email">
+          <label class="form-check-label"
+                 for="emailRadioId">email</label>
+        </div>
+        <div class="form-check form-check-inline">
+          <input class="form-check-input"
+                 (click)="setNotification('text')"
+                 formControlName="notification"
+                 type="radio"
+                 id="textRadioId"
+                 value="text">
+          <label class="form-check-label"
+                 for="textRadioId">text</label>
+        </div>
+      </div>
 
       <div class="form-group row mb-2">
         <div class="offset-md-2 col-md-4">
