--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -206,7 +206,24 @@
         </div>
       </div>
 
-
+      <div class="form-group row mb-2">
+          <label class="col-md-2 col-form-label"
+                 for="ratingId">rating</label>
+          <div class="col-md-8">
+            <input class="form-control"
+                   id="ratingId"
+                   type="number"
+                   placeholder="rating"
+                   formControlName="rating"
+                   [ngClass]="{'is-invalid': (customerForm.get('rating').touched || customerForm.get('rating').dirty) && !customerForm.get('rating').valid }" />
+            <span class="invalid-feedback">
+              <span *ngIf="customerForm.get('rating').errors?.range">
+                Please enter your rating Range correct.
+              </span>
+            </span>
+          </div>
+        </div>
+  
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label pt-0">sent Notifications</label>
         <div class="form-check form-check-inline">
