--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -57,20 +57,9 @@
                    type="email"
                    placeholder="Email (required)"
                    formControlName="email"
-                   [ngClass]="{'is-invalid': 
-                    customerForm.get('emailGroup').errors || 
-                    ((customerForm.get('emailGroup.email').touched || customerForm.get('emailGroup.email').dirty) && !customerForm.get('emailGroup.email').valid) 
-                  }" />
+                   [ngClass]="{'is-invalid': emailMessage }" />
             <span class="invalid-feedback">
-              <span *ngIf="customerForm.get('emailGroup.email').errors?.required">
-                Please enter your email address.
-              </span>
-              <span *ngIf="customerForm.get('emailGroup.email').errors?.email">
-                Please enter a valid email address.
-              </span>
-              <span *ngIf="customerForm.get('emailGroup').errors?.match">
-                email not match la lalalalalala!
-              </span>
+              {{ emailMessage }}
             </span>
           </div>
         </div>
@@ -102,10 +91,7 @@
         </div>
       </div>
 
-
-
-
-      <!-- <div class="form-group row mb-2">
+      <div class="form-group row mb-2">
         <div class="col-md-8">
           <div class="form-check">
             <label class="form-check-label">
@@ -116,9 +102,9 @@
             </label>
           </div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div *ngIf="customer.sendCatalog">
+      <div *ngIf="customerForm.get('sendCatalog').value">
         <div class="form-group row mb-2">
           <label class="col-md-2 col-form-label pt-0">Address Type</label>
           <div class="col-md-8">
@@ -128,8 +114,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="home"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Home
+                       formControlName="addressType"> Home
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -138,8 +123,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="work"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Work
+                       formControlName="addressType"> Work
               </label>
             </div>
             <div class="form-check form-check-inline">
@@ -148,8 +132,7 @@
                        id="addressType1Id"
                        type="radio"
                        value="other"
-                       [(ngModel)]="customer.addressType"
-                       name="addressType"> Other
+                       formControlName="addressType"> Other
               </label>
             </div>
           </div>
@@ -163,8 +146,7 @@
                    id="street1Id"
                    type="text"
                    placeholder="Street address"
-                   [(ngModel)]="customer.street1"
-                   name="street1">
+                   formControlName="street1">
           </div>
         </div>
 
@@ -176,8 +158,7 @@
                    id="street2Id"
                    type="text"
                    placeholder="Street address (second line)"
-                   [(ngModel)]="customer.street2"
-                   name="street2">
+                   formControlName="street2">
           </div>
         </div>
 
@@ -189,14 +170,12 @@
                    id="cityId"
                    type="text"
                    placeholder="City"
-                   [(ngModel)]="customer.city"
-                   name="city">
+                   formControlName="city">
           </div>
           <div class="col-md-3">
             <select class="form-control"
                     id="stateId"
-                    [(ngModel)]="customer.state"
-                    name="state">
+                    formControlName="state">
               <option value=""
                       disabled
                       selected
@@ -216,11 +195,12 @@
                    id="zipId"
                    type="number"
                    placeholder="Zip Code"
-                   [(ngModel)]="customer.zip"
-                   name="zip">
+                   formControlName="zip">
           </div>
         </div>
-      </div> -->
+      </div>
+
+
 
       <div class="form-group row mb-2">
         <label class="col-md-2 col-form-label"
@@ -292,12 +272,13 @@
         </div>
       </div>
 
-      <button type="button"
+
+      <!-- <button type="button"
               (click)="SetValueF()"
               class="btn btn-danger">SetValue</button>
       <button type="button"
               (click)="PatchValue()"
-              class="btn">PatchValue</button>
+              class="btn">PatchValue</button> -->
     </form>
   </div>
 </div>
