--- a/Demo-Start/src/app/customers/customer.component.html
+++ b/Demo-Start/src/app/customers/customer.component.html
@@ -203,6 +203,11 @@
         </div>
       </div>
 
+      <div class="form-group row mb-2">
+        <div class="offset-md-2 col-md-4">
+          <button type="button" (click)="addAdAddress()" class="btn btn-danger">Add Address</button>
+        </div>
+      </div>
 
       <!-- <button type="button"
               (click)="SetValueF()"
